# compiletime-utils

./: LICENSE  README.md  make_single_header.sh
include/: ct.pri  rt.pri
include/ct/: ct_bytes_utils.hpp  ct_count_bytes.hpp  ct_count_values.hpp  ct_flatten_trait.hpp  ct_test_equal.hpp
include/ct/serialization/: README.md  ct_serialization_pack.hpp  ct_serialization_print.hpp  ct_serialization_unpack.hpp
include/ct/serialization/utils/: ct_serialization_utils.hpp  ct_serialization_utils_memcpy_values_count.hpp  ct_serialization_utils_offsets.hpp
include/ct/utils/: ct_utils_accumulate.hpp  ct_utils_index_sequence.hpp  ct_utils_nth_type_of.hpp
include/ct/utils/typelist/: ct_utils_typelist.hpp  ct_utils_typelist_first_types.hpp  ct_utils_typelist_flatten.hpp  ct_utils_typelist_join.hpp  ct_utils_typelist_repeat.hpp  ct_utils_typelist_to_tuple.hpp
include/rt/serialization/: README.md  rt_serialization_bytes_count.hpp  rt_serialization_bytes_count_std.hpp  rt_serialization_bytes_count_stl.hpp  rt_serialization_pack.hpp  rt_serialization_pack_std.hpp  rt_serialization_pack_stl.hpp  rt_serialization_stl_collection_size.hpp  rt_serialization_unpack.hpp  rt_serialization_unpack_std.hpp  rt_serialization_unpack_stl.hpp
tests/ct_serialization_tests/: CMakeLists.txt  ct_serialization_test.cpp
tests/serialization_tests/: CMakeLists.txt  ct_serialization_test.cpp  main.cpp  rt_serialization_test.cpp
